// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loot Bag resolver can create a loot bag with duplicate items 1`] = `
Object {
  "data": Object {
    "createLootBag": Object {
      "id": 1,
      "items": Array [
        Object {
          "item": Object {
            "name": "gm",
          },
          "order": 0,
        },
        Object {
          "item": Object {
            "name": "gm",
          },
          "order": 1,
        },
        Object {
          "item": Object {
            "name": "gm",
          },
          "order": 2,
        },
        Object {
          "item": Object {
            "name": "gm",
          },
          "order": 3,
        },
        Object {
          "item": Object {
            "name": "gm",
          },
          "order": 4,
        },
        Object {
          "item": Object {
            "name": "gm",
          },
          "order": 5,
        },
        Object {
          "item": Object {
            "name": "gm",
          },
          "order": 6,
        },
        Object {
          "item": Object {
            "name": "gm",
          },
          "order": 7,
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Loot Bag resolver can create a new loot bag 1`] = `
Object {
  "data": Object {
    "createLootBag": Object {
      "id": 1,
      "items": Array [
        Object {
          "item": Object {
            "name": "1",
          },
          "order": 0,
        },
        Object {
          "item": Object {
            "name": "2",
          },
          "order": 1,
        },
        Object {
          "item": Object {
            "name": "3",
          },
          "order": 2,
        },
        Object {
          "item": Object {
            "name": "4",
          },
          "order": 3,
        },
        Object {
          "item": Object {
            "name": "5",
          },
          "order": 4,
        },
        Object {
          "item": Object {
            "name": "6",
          },
          "order": 5,
        },
        Object {
          "item": Object {
            "name": "7",
          },
          "order": 6,
        },
        Object {
          "item": Object {
            "name": "8",
          },
          "order": 7,
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Loot Bag resolver can fetch a loot bag by ID 1`] = `
Object {
  "data": Object {
    "lootBag": Object {
      "items": Array [
        Object {
          "item": Object {
            "name": "1",
          },
          "order": 0,
        },
        Object {
          "item": Object {
            "name": "2",
          },
          "order": 1,
        },
        Object {
          "item": Object {
            "name": "3",
          },
          "order": 2,
        },
        Object {
          "item": Object {
            "name": "4",
          },
          "order": 3,
        },
        Object {
          "item": Object {
            "name": "5",
          },
          "order": 4,
        },
        Object {
          "item": Object {
            "name": "6",
          },
          "order": 5,
        },
        Object {
          "item": Object {
            "name": "7",
          },
          "order": 6,
        },
        Object {
          "item": Object {
            "name": "8",
          },
          "order": 7,
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Loot Bag resolver sorts loot items based on insert order 1`] = `
Object {
  "data": Object {
    "lootBag": Object {
      "items": Array [
        Object {
          "item": Object {
            "name": "8",
          },
          "order": 0,
        },
        Object {
          "item": Object {
            "name": "7",
          },
          "order": 1,
        },
        Object {
          "item": Object {
            "name": "6",
          },
          "order": 2,
        },
        Object {
          "item": Object {
            "name": "5",
          },
          "order": 3,
        },
        Object {
          "item": Object {
            "name": "4",
          },
          "order": 4,
        },
        Object {
          "item": Object {
            "name": "3",
          },
          "order": 5,
        },
        Object {
          "item": Object {
            "name": "2",
          },
          "order": 6,
        },
        Object {
          "item": Object {
            "name": "1",
          },
          "order": 7,
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Loot Bag resolver throws error: items must contain 8 elements 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Argument Validation Error],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Loot Bag resolver throws error: items must contain 8 elements 2`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Argument Validation Error],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Loot Bag resolver throws error: items must contain 8 elements 3`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Argument Validation Error],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Loot Bag resolver throws error: loot items cannot be empty strings 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Argument Validation Error],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Loot Bag resolver throws error: loot items cannot contain profanity 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Error: loot items contain profanity],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
